refactoring : 문자열 계산기 기능 완성